--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,20 +7,21 @@
     <string name="action_sign_in_short">Sign in</string>
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must contain minimum 8 characters at least
-        \n 1 lower case letter
+    <string name="invalid_password">Password must contain
+        \n minimum 8 characters,
+        \n 1 lower case letter,
         \n 1 upper case letter,
-        \n 1 Number, and
-        \n 1 Special Character
+        \n 1 number, and
+        \n 1 special character.
     </string>
     <string name="login_failed">"Login failed"</string>
     <string name="sigup">Sign Up</string>
     <string name="please_wait">Please wait …</string>
     <string name="session_expired">Your session has expired.</string>
-
     <string name="failure_occurred">Failure occurred</string>
     <string name="something_went_wrong">User name or password is incorrect. Try again.</string>
     <string name="ok">OK</string>
     <string name="no_data_found">No data found</string>
+    <string name="sign_up_invitation">Haven&#39;t signed up yet. Click here to sign up.</string>
 
 </resources>
